update main figure 4 and 3

--- a/1.train_models/classify_genotypes/generate_eval_data.ipynb
+++ b/1.train_models/classify_genotypes/generate_eval_data.ipynb
@@ -1736,7 +1736,7 @@
    "source": [
     "# Concatenate the DataFrames vertically and save to a Parquet file\n",
     "combined_df = pd.concat([shuffled_probabilitydf, probabilitydf], axis=0).reset_index(drop=True)\n",
-    "combined_df.to_parquet(f\"./data/nf1_eval_data.parquet\")\n",
+    "combined_df.to_parquet(f\"./data/nf1_final_model_eval_data.parquet\")\n",
     "\n",
     "combined_df"
    ]
