--- a/2.evaluate_models/classify_genotypes/genotype_classification_evaluation.ipynb
+++ b/2.evaluate_models/classify_genotypes/genotype_classification_evaluation.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "data_path = pathlib.Path(f\"{root_dir}/1.train_models/classify_genotypes/data\")\n",
     "\n",
-    "evaldf = pd.read_parquet(f\"{data_path}/nf1_eval_data.parquet\")\n",
+    "evaldf = pd.read_parquet(f\"{data_path}/nf1_final_model_eval_data.parquet\")\n",
     "model = load(f\"{data_path}/trained_nf1_model.joblib\")\n",
     "le = load(f\"{data_path}/trained_nf1_model_label_encoder.joblib\")"
    ]
@@ -759,7 +759,7 @@
    "outputs": [],
    "source": [
     "for met, met_data in eval_mets.items():\n",
-    "    pd.DataFrame(eval_mets[met]).to_parquet(f\"{eval_path}/{met}.parquet\")\n",
+    "    pd.DataFrame(eval_mets[met]).to_parquet(f\"{eval_path}/{met}_final_model.parquet\")\n",
     "\n",
     "pd.DataFrame(\n",
     "    {\n",
