--- a/4.figures/main_figure_4/1.find_sc_crops_top_feat.ipynb
+++ b/4.figures/main_figure_4/1.find_sc_crops_top_feat.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate min/max repesentative single-cell images per top WT and Null feature from the model"
+    "# Generate min/max repesentative single-cell images per top two Null features from the model\n",
+    "\n",
+    "1. Average edge intensity of GFP in cytoplasm\n",
+    "2. Radial distribution of RFP in cytoplasm"
    ]
   },
   {
@@ -508,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load in feature importance data and determine the top two differential features (top for WT and top for Null)"
+    "## Load in feature importance data and determine the top two differential features for Null"
    ]
   },
   {
@@ -520,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cells_Correlation_Correlation_DAPI_GFP\n",
+      "Cytoplasm_Intensity_MeanIntensityEdge_GFP\n",
       "Cytoplasm_RadialDistribution_FracAtD_RFP_4of4\n"
      ]
     }
@@ -532,15 +535,15 @@
     "    )\n",
     ")\n",
     "\n",
-    "# Find the top positive feature\n",
-    "Top_WT_feature = feat_import_df.loc[feat_import_df['feature_importances'].idxmax(), 'feature_names']\n",
+    "# Find the top positive feature (get the second highest feature that is not correlation)\n",
+    "intensity_feature = feat_import_df.sort_values(by='feature_importances', ascending=True).iloc[1]['feature_names']\n",
     "\n",
     "# Find the top negative feature\n",
-    "Top_Null_feature = feat_import_df.loc[feat_import_df['feature_importances'].idxmin(), 'feature_names']\n",
+    "radial_feature = feat_import_df.loc[feat_import_df['feature_importances'].idxmin(), 'feature_names']\n",
     "\n",
     "# Print the features\n",
-    "print(Top_WT_feature)\n",
-    "print(Top_Null_feature)"
+    "print(intensity_feature)\n",
+    "print(radial_feature)"
    ]
   },
   {
@@ -857,7 +860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Max single-cells for Top WT feature (represent WT)"
+    "### Max single-cells for Intensity feature (represent Null)"
    ]
   },
   {
@@ -893,7 +896,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Cells_Correlation_Correlation_DAPI_GFP</th>\n",
+       "      <th>Cytoplasm_Intensity_MeanIntensityEdge_GFP</th>\n",
        "      <th>Metadata_genotype</th>\n",
        "      <th>Metadata_Well</th>\n",
        "      <th>Metadata_Plate</th>\n",
@@ -905,62 +908,62 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1285</th>\n",
-       "      <td>4.506482</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>C3</td>\n",
+       "      <th>4303</th>\n",
+       "      <td>5.036352</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>C11</td>\n",
        "      <td>Plate_5</td>\n",
-       "      <td>13</td>\n",
+       "      <td>16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>583.070742</td>\n",
-       "      <td>683.196429</td>\n",
+       "      <td>939.361512</td>\n",
+       "      <td>412.432302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1308</th>\n",
-       "      <td>4.230364</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>C3</td>\n",
+       "      <th>3509</th>\n",
+       "      <td>4.876263</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>C10</td>\n",
        "      <td>Plate_5</td>\n",
-       "      <td>14</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>579.663043</td>\n",
-       "      <td>597.392292</td>\n",
+       "      <td>951.492215</td>\n",
+       "      <td>667.124058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>587</th>\n",
-       "      <td>3.716595</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>C2</td>\n",
+       "      <th>3442</th>\n",
+       "      <td>4.647287</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>C10</td>\n",
        "      <td>Plate_5</td>\n",
        "      <td>11</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>573.631579</td>\n",
-       "      <td>582.405502</td>\n",
+       "      <td>645.682606</td>\n",
+       "      <td>256.935204</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Cells_Correlation_Correlation_DAPI_GFP Metadata_genotype Metadata_Well  \\\n",
-       "1285                                4.506482                WT            C3   \n",
-       "1308                                4.230364                WT            C3   \n",
-       "587                                 3.716595                WT            C2   \n",
+       "      Cytoplasm_Intensity_MeanIntensityEdge_GFP Metadata_genotype  \\\n",
+       "4303                                   5.036352              Null   \n",
+       "3509                                   4.876263              Null   \n",
+       "3442                                   4.647287              Null   \n",
        "\n",
-       "     Metadata_Plate Metadata_Site  \\\n",
-       "1285        Plate_5            13   \n",
-       "1308        Plate_5            14   \n",
-       "587         Plate_5            11   \n",
+       "     Metadata_Well Metadata_Plate Metadata_Site  \\\n",
+       "4303           C11        Plate_5            16   \n",
+       "3509           C10        Plate_5             4   \n",
+       "3442           C10        Plate_5            11   \n",
        "\n",
        "      Metadata_Number_of_Cells_Neighbors_Adjacent  \\\n",
-       "1285                                          0.0   \n",
-       "1308                                          0.0   \n",
-       "587                                           0.0   \n",
+       "4303                                          0.0   \n",
+       "3509                                          0.0   \n",
+       "3442                                          0.0   \n",
        "\n",
        "      Metadata_Nuclei_Location_Center_X  Metadata_Nuclei_Location_Center_Y  \n",
-       "1285                         583.070742                         683.196429  \n",
-       "1308                         579.663043                         597.392292  \n",
-       "587                          573.631579                         582.405502  "
+       "4303                         939.361512                         412.432302  \n",
+       "3509                         951.492215                         667.124058  \n",
+       "3442                         645.682606                         256.935204  "
       ]
      },
      "execution_count": 8,
@@ -970,11 +973,11 @@
    ],
    "source": [
     "# Get data frame with the top 3 single-cells from the top WT coefficient\n",
-    "max_WT_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"WT\"].nlargest(\n",
-    "    3, Top_WT_feature\n",
+    "max_int_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"Null\"].nlargest(\n",
+    "    3, intensity_feature\n",
     ")[\n",
     "    [\n",
-    "        Top_WT_feature,\n",
+    "        intensity_feature,\n",
     "        \"Metadata_genotype\",\n",
     "        \"Metadata_Well\",\n",
     "        \"Metadata_Plate\",\n",
@@ -986,18 +989,18 @@
     "]\n",
     "\n",
     "# Append the DataFrame and its name to the lists\n",
-    "list_of_dfs.append(max_WT_feature)\n",
-    "list_of_names.append(\"max_WT_feature\")\n",
+    "list_of_dfs.append(max_int_feature)\n",
+    "list_of_names.append(\"max_int_feature\")\n",
     "\n",
-    "print(max_WT_feature.shape)\n",
-    "max_WT_feature"
+    "print(max_int_feature.shape)\n",
+    "max_int_feature"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Min single-cells for Top WT feature (represent Null)"
+    "### Min single-cells for Intensity feature (represent WT)"
    ]
   },
   {
@@ -1033,7 +1036,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Cells_Correlation_Correlation_DAPI_GFP</th>\n",
+       "      <th>Cytoplasm_Intensity_MeanIntensityEdge_GFP</th>\n",
        "      <th>Metadata_genotype</th>\n",
        "      <th>Metadata_Well</th>\n",
        "      <th>Metadata_Plate</th>\n",
@@ -1045,62 +1048,62 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2438</th>\n",
-       "      <td>-4.755442</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>B9</td>\n",
+       "      <th>2296</th>\n",
+       "      <td>-1.316602</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>F4</td>\n",
        "      <td>Plate_5</td>\n",
-       "      <td>19</td>\n",
+       "      <td>8</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>431.907657</td>\n",
-       "      <td>629.735016</td>\n",
+       "      <td>434.582913</td>\n",
+       "      <td>513.323720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2841</th>\n",
-       "      <td>-2.671526</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>D9</td>\n",
+       "      <th>994</th>\n",
+       "      <td>-1.296221</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>F2</td>\n",
        "      <td>Plate_5</td>\n",
-       "      <td>17</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>691.091827</td>\n",
-       "      <td>728.043960</td>\n",
+       "      <td>474.847136</td>\n",
+       "      <td>689.379705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2735</th>\n",
-       "      <td>-2.214581</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>D9</td>\n",
+       "      <th>846</th>\n",
+       "      <td>-1.292468</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>E2</td>\n",
        "      <td>Plate_5</td>\n",
-       "      <td>10</td>\n",
+       "      <td>21</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>355.892197</td>\n",
-       "      <td>565.846509</td>\n",
+       "      <td>813.353410</td>\n",
+       "      <td>481.614144</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Cells_Correlation_Correlation_DAPI_GFP Metadata_genotype Metadata_Well  \\\n",
-       "2438                               -4.755442              Null            B9   \n",
-       "2841                               -2.671526              Null            D9   \n",
-       "2735                               -2.214581              Null            D9   \n",
+       "      Cytoplasm_Intensity_MeanIntensityEdge_GFP Metadata_genotype  \\\n",
+       "2296                                  -1.316602                WT   \n",
+       "994                                   -1.296221                WT   \n",
+       "846                                   -1.292468                WT   \n",
        "\n",
-       "     Metadata_Plate Metadata_Site  \\\n",
-       "2438        Plate_5            19   \n",
-       "2841        Plate_5            17   \n",
-       "2735        Plate_5            10   \n",
+       "     Metadata_Well Metadata_Plate Metadata_Site  \\\n",
+       "2296            F4        Plate_5             8   \n",
+       "994             F2        Plate_5             5   \n",
+       "846             E2        Plate_5            21   \n",
        "\n",
        "      Metadata_Number_of_Cells_Neighbors_Adjacent  \\\n",
-       "2438                                          0.0   \n",
-       "2841                                          0.0   \n",
-       "2735                                          0.0   \n",
+       "2296                                          0.0   \n",
+       "994                                           0.0   \n",
+       "846                                           0.0   \n",
        "\n",
        "      Metadata_Nuclei_Location_Center_X  Metadata_Nuclei_Location_Center_Y  \n",
-       "2438                         431.907657                         629.735016  \n",
-       "2841                         691.091827                         728.043960  \n",
-       "2735                         355.892197                         565.846509  "
+       "2296                         434.582913                         513.323720  \n",
+       "994                          474.847136                         689.379705  \n",
+       "846                          813.353410                         481.614144  "
       ]
      },
      "execution_count": 9,
@@ -1110,11 +1113,11 @@
    ],
    "source": [
     "# Get data frame with the top 3 single-cells from the top WT coefficient\n",
-    "min_WT_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"Null\"].nsmallest(\n",
-    "    3, Top_WT_feature\n",
+    "min_int_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"WT\"].nsmallest(\n",
+    "    3, intensity_feature\n",
     ")[\n",
     "    [\n",
-    "        Top_WT_feature,\n",
+    "        intensity_feature,\n",
     "        \"Metadata_genotype\",\n",
     "        \"Metadata_Well\",\n",
     "        \"Metadata_Plate\",\n",
@@ -1126,18 +1129,18 @@
     "]\n",
     "\n",
     "# Append the DataFrame and its name to the lists\n",
-    "list_of_dfs.append(min_WT_feature)\n",
-    "list_of_names.append(\"min_WT_feature\")\n",
+    "list_of_dfs.append(min_int_feature)\n",
+    "list_of_names.append(\"min_int_feature\")\n",
     "\n",
-    "print(min_WT_feature.shape)\n",
-    "min_WT_feature"
+    "print(min_int_feature.shape)\n",
+    "min_int_feature"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Max single-cells for Top Null feature (represent Null)"
+    "### Max single-cells for Radial Distribution feature (represent Null)"
    ]
   },
   {
@@ -1250,11 +1253,11 @@
    ],
    "source": [
     "# Get data frame with the top 3 single-cells from the top Null coefficient\n",
-    "max_Null_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"Null\"].nlargest(\n",
-    "    3, Top_Null_feature\n",
+    "max_radial_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"Null\"].nlargest(\n",
+    "    3, radial_feature\n",
     ")[\n",
     "    [\n",
-    "        Top_Null_feature,\n",
+    "        radial_feature,\n",
     "        \"Metadata_genotype\",\n",
     "        \"Metadata_Well\",\n",
     "        \"Metadata_Plate\",\n",
@@ -1266,18 +1269,18 @@
     "]\n",
     "\n",
     "# Append the DataFrame and its name to the lists\n",
-    "list_of_dfs.append(max_Null_feature)\n",
-    "list_of_names.append(\"max_Null_feature\")\n",
+    "list_of_dfs.append(max_radial_feature)\n",
+    "list_of_names.append(\"max_radial_feature\")\n",
     "\n",
-    "print(max_Null_feature.shape)\n",
-    "max_Null_feature"
+    "print(max_radial_feature.shape)\n",
+    "max_radial_feature"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Min single-cells for Top Null feature (represent WT)"
+    "### Min single-cells for Radial Distribution feature (represent WT)"
    ]
   },
   {
@@ -1390,11 +1393,11 @@
    ],
    "source": [
     "# Get data frame with the top 3 single-cells from the top Null coefficient\n",
-    "min_Null_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"WT\"].nsmallest(\n",
-    "    3, Top_Null_feature\n",
+    "min_radial_feature = filtered_plate5_df[filtered_plate5_df[\"Metadata_genotype\"] == \"WT\"].nsmallest(\n",
+    "    3, radial_feature\n",
     ")[\n",
     "    [\n",
-    "        Top_Null_feature,\n",
+    "        radial_feature,\n",
     "        \"Metadata_genotype\",\n",
     "        \"Metadata_Well\",\n",
     "        \"Metadata_Plate\",\n",
@@ -1406,11 +1409,11 @@
     "]\n",
     "\n",
     "# Append the DataFrame and its name to the lists\n",
-    "list_of_dfs.append(min_Null_feature)\n",
-    "list_of_names.append(\"min_Null_feature\")\n",
+    "list_of_dfs.append(min_radial_feature)\n",
+    "list_of_names.append(\"min_radial_feature\")\n",
     "\n",
-    "print(min_Null_feature.shape)\n",
-    "min_Null_feature"
+    "print(min_radial_feature.shape)\n",
+    "min_radial_feature"
    ]
   },
   {
@@ -1429,18 +1432,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   (   'max_WT_feature_1',\n",
-      "        {   'location_center_x': 583.0707417582418,\n",
-      "            'location_center_y': 683.1964285714286,\n",
+      "[   (   'max_int_feature_1',\n",
+      "        {   'location_center_x': 939.3615120274914,\n",
+      "            'location_center_y': 412.43230240549826,\n",
       "            'plate': 'Plate_5',\n",
-      "            'site': '13',\n",
-      "            'well': 'C3'}),\n",
-      "    (   'max_WT_feature_2',\n",
-      "        {   'location_center_x': 579.6630434782609,\n",
-      "            'location_center_y': 597.3922924901186,\n",
+      "            'site': '16',\n",
+      "            'well': 'C11'}),\n",
+      "    (   'max_int_feature_2',\n",
+      "        {   'location_center_x': 951.4922149673531,\n",
+      "            'location_center_y': 667.1240582621798,\n",
       "            'plate': 'Plate_5',\n",
-      "            'site': '14',\n",
-      "            'well': 'C3'})]\n"
+      "            'site': '4',\n",
+      "            'well': 'C10'})]\n"
      ]
     }
    ],
