Retrained nf1 model after bug fix

--- a/1.train_models/classify_genotypes/classify_genotypes.ipynb
+++ b/1.train_models/classify_genotypes/classify_genotypes.ipynb
@@ -17,10 +17,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:06.086763Z",
-     "iopub.status.busy": "2024-05-23T21:40:06.086586Z",
-     "iopub.status.idle": "2024-05-23T21:40:06.528887Z",
-     "shell.execute_reply": "2024-05-23T21:40:06.528495Z"
+     "iopub.execute_input": "2024-06-14T21:31:21.640804Z",
+     "iopub.status.busy": "2024-06-14T21:31:21.640572Z",
+     "iopub.status.idle": "2024-06-14T21:31:22.096614Z",
+     "shell.execute_reply": "2024-06-14T21:31:22.096212Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -56,10 +56,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:06.530930Z",
-     "iopub.status.busy": "2024-05-23T21:40:06.530754Z",
-     "iopub.status.idle": "2024-05-23T21:40:06.533457Z",
-     "shell.execute_reply": "2024-05-23T21:40:06.533189Z"
+     "iopub.execute_input": "2024-06-14T21:31:22.098910Z",
+     "iopub.status.busy": "2024-06-14T21:31:22.098696Z",
+     "iopub.status.idle": "2024-06-14T21:31:22.101458Z",
+     "shell.execute_reply": "2024-06-14T21:31:22.101178Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -106,39 +106,24 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:06.535292Z",
-     "iopub.status.busy": "2024-05-23T21:40:06.535158Z",
-     "iopub.status.idle": "2024-05-23T21:40:06.944608Z",
-     "shell.execute_reply": "2024-05-23T21:40:06.944248Z"
+     "iopub.execute_input": "2024-06-14T21:31:22.102970Z",
+     "iopub.status.busy": "2024-06-14T21:31:22.102779Z",
+     "iopub.status.idle": "2024-06-14T21:31:22.486368Z",
+     "shell.execute_reply": "2024-06-14T21:31:22.485984Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
    "outputs": [],
    "source": [
-    "plate5df_path = pathlib.Path(\n",
-    "    root_dir\n",
-    "    / \"../nf1_cellpainting_data/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\"\n",
-    ").resolve(strict=True)\n",
-    "plate3df_path = pathlib.Path(\n",
-    "    root_dir\n",
-    "    / \"../nf1_cellpainting_data/3.processing_features/data/single_cell_profiles/Plate_3_sc_feature_selected.parquet\"\n",
-    ").resolve(strict=True)\n",
-    "plate3pdf_path = pathlib.Path(\n",
-    "    root_dir\n",
-    "    / \"../nf1_cellpainting_data/3.processing_features/data/single_cell_profiles/Plate_3_prime_sc_feature_selected.parquet\"\n",
-    ").resolve(strict=True)\n",
-    "plate4df_path = pathlib.Path(\n",
-    "    root_dir\n",
-    "    / \"../nf1_cellpainting_data/3.processing_features/data/single_cell_profiles/Plate_4_sc_feature_selected.parquet\"\n",
-    ").resolve(strict=True)\n",
+    "plate5df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "plate3df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "plate3pdf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_prime_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "plate4df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_4_sc_feature_selected.parquet\").resolve(strict=True)\n",
     "\n",
     "plate5df = pd.read_parquet(plate5df_path)\n",
     "plate4df = pd.read_parquet(plate4df_path)\n",
     "plate3df = pd.read_parquet(plate3df_path)\n",
     "plate3pdf = pd.read_parquet(plate3pdf_path)\n",
-    "\n",
-    "# Correct Plate_3_prime plate column bug\n",
-    "plate3pdf[\"Metadata_Plate\"] = \"Plate_3_prime\"\n",
     "\n",
     "# Set the seed\n",
     "rng = np.random.default_rng(0)"
@@ -158,10 +143,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:06.946995Z",
-     "iopub.status.busy": "2024-05-23T21:40:06.946846Z",
-     "iopub.status.idle": "2024-05-23T21:40:06.948839Z",
-     "shell.execute_reply": "2024-05-23T21:40:06.948589Z"
+     "iopub.execute_input": "2024-06-14T21:31:22.488529Z",
+     "iopub.status.busy": "2024-06-14T21:31:22.488241Z",
+     "iopub.status.idle": "2024-06-14T21:31:22.490432Z",
+     "shell.execute_reply": "2024-06-14T21:31:22.490159Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -186,10 +171,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:06.950523Z",
-     "iopub.status.busy": "2024-05-23T21:40:06.950385Z",
-     "iopub.status.idle": "2024-05-23T21:40:06.954572Z",
-     "shell.execute_reply": "2024-05-23T21:40:06.954314Z"
+     "iopub.execute_input": "2024-06-14T21:31:22.491756Z",
+     "iopub.status.busy": "2024-06-14T21:31:22.491566Z",
+     "iopub.status.idle": "2024-06-14T21:31:22.495829Z",
+     "shell.execute_reply": "2024-06-14T21:31:22.495547Z"
     },
     "jukit_cell_id": "qP1KgMqkE7"
    },
@@ -290,10 +275,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:06.956107Z",
-     "iopub.status.busy": "2024-05-23T21:40:06.956005Z",
-     "iopub.status.idle": "2024-05-23T21:40:06.957932Z",
-     "shell.execute_reply": "2024-05-23T21:40:06.957684Z"
+     "iopub.execute_input": "2024-06-14T21:31:22.498111Z",
+     "iopub.status.busy": "2024-06-14T21:31:22.497928Z",
+     "iopub.status.idle": "2024-06-14T21:31:22.500181Z",
+     "shell.execute_reply": "2024-06-14T21:31:22.499914Z"
     },
     "jukit_cell_id": "z9zzUXpQ67"
    },
@@ -324,10 +309,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:06.959432Z",
-     "iopub.status.busy": "2024-05-23T21:40:06.959331Z",
-     "iopub.status.idle": "2024-05-23T21:40:07.293272Z",
-     "shell.execute_reply": "2024-05-23T21:40:07.292870Z"
+     "iopub.execute_input": "2024-06-14T21:31:22.501532Z",
+     "iopub.status.busy": "2024-06-14T21:31:22.501428Z",
+     "iopub.status.idle": "2024-06-14T21:31:22.837568Z",
+     "shell.execute_reply": "2024-06-14T21:31:22.837146Z"
     },
     "jukit_cell_id": "qrteU1j4F9"
    },
@@ -373,54 +358,21 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:07.295568Z",
-     "iopub.status.busy": "2024-05-23T21:40:07.295415Z",
-     "iopub.status.idle": "2024-05-23T21:40:07.486189Z",
-     "shell.execute_reply": "2024-05-23T21:40:07.485785Z"
+     "iopub.execute_input": "2024-06-14T21:31:22.840007Z",
+     "iopub.status.busy": "2024-06-14T21:31:22.839860Z",
+     "iopub.status.idle": "2024-06-14T21:31:23.015509Z",
+     "shell.execute_reply": "2024-06-14T21:31:23.015081Z"
     },
     "jukit_cell_id": "JPOu8mYg6w"
    },
    "outputs": [],
    "source": [
     "# Columns common to all plates\n",
-    "plate_cols = list(\n",
-    "    set(plate5df.columns)\n",
-    "    & set(plate3df.columns)\n",
-    "    & set(plate3pdf.columns)\n",
-    "    & set(plate4df.columns)\n",
-    ")\n",
+    "plate_cols = list(set(plate5df.columns) & set(plate3df.columns) & set(plate3pdf.columns) & set(plate4df.columns))\n",
     "\n",
-    "restdf = pd.concat(\n",
-    "    [\n",
-    "        rest5df[plate_cols],\n",
-    "        rest3df[plate_cols],\n",
-    "        rest3pdf[plate_cols],\n",
-    "        rest4df[plate_cols],\n",
-    "    ],\n",
-    "    ignore_index=True,\n",
-    ").reset_index(drop=True)\n",
+    "restdf = pd.concat([rest5df[plate_cols], rest3df[plate_cols], rest3pdf[plate_cols], rest4df[plate_cols]], ignore_index=True).reset_index(drop=True)\n",
     "\n",
-    "# Add Metadata_datasplit column to restdf\n",
-    "restdf = restdf.assign(datasplit='rest')\n",
-    "\n",
-    "testdf = pd.concat(\n",
-    "    [\n",
-    "        test5df[plate_cols],\n",
-    "        test3df[plate_cols],\n",
-    "        test3pdf[plate_cols],\n",
-    "        test4df[plate_cols],\n",
-    "    ],\n",
-    "    ignore_index=True,\n",
-    ").reset_index(drop=True)\n",
-    "\n",
-    "# Add Metadata_datasplit column to testdf\n",
-    "testdf = testdf.assign(datasplit='test')\n",
-    "\n",
-    "# Concatenate restdf and testdf vertically\n",
-    "model_df = pd.concat([restdf, testdf], ignore_index=True)\n",
-    "\n",
-    "# Save model data to apply the model for evaluation\n",
-    "model_df.to_parquet(\"./model_data.parquet\")"
+    "testdf = pd.concat([test5df[plate_cols], test3df[plate_cols], test3pdf[plate_cols], test4df[plate_cols]], ignore_index=True).reset_index(drop=True)"
    ]
   },
   {
@@ -437,10 +389,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:07.488225Z",
-     "iopub.status.busy": "2024-05-23T21:40:07.488112Z",
-     "iopub.status.idle": "2024-05-23T21:40:07.491778Z",
-     "shell.execute_reply": "2024-05-23T21:40:07.491506Z"
+     "iopub.execute_input": "2024-06-14T21:31:23.017495Z",
+     "iopub.status.busy": "2024-06-14T21:31:23.017346Z",
+     "iopub.status.idle": "2024-06-14T21:31:23.021514Z",
+     "shell.execute_reply": "2024-06-14T21:31:23.021240Z"
     },
     "jukit_cell_id": "NTCaf4xXY1"
    },
@@ -455,10 +407,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:07.493445Z",
-     "iopub.status.busy": "2024-05-23T21:40:07.493307Z",
-     "iopub.status.idle": "2024-05-23T21:40:07.514955Z",
-     "shell.execute_reply": "2024-05-23T21:40:07.514608Z"
+     "iopub.execute_input": "2024-06-14T21:31:23.023176Z",
+     "iopub.status.busy": "2024-06-14T21:31:23.022970Z",
+     "iopub.status.idle": "2024-06-14T21:31:23.044781Z",
+     "shell.execute_reply": "2024-06-14T21:31:23.044420Z"
     },
     "jukit_cell_id": "m7apYZPkME"
    },
@@ -499,10 +451,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:07.516835Z",
-     "iopub.status.busy": "2024-05-23T21:40:07.516724Z",
-     "iopub.status.idle": "2024-05-23T21:40:07.519421Z",
-     "shell.execute_reply": "2024-05-23T21:40:07.519167Z"
+     "iopub.execute_input": "2024-06-14T21:31:23.046693Z",
+     "iopub.status.busy": "2024-06-14T21:31:23.046580Z",
+     "iopub.status.idle": "2024-06-14T21:31:23.049490Z",
+     "shell.execute_reply": "2024-06-14T21:31:23.049225Z"
     },
     "jukit_cell_id": "sZFW0vn0zv"
    },
@@ -554,10 +506,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-23T21:40:07.521074Z",
-     "iopub.status.busy": "2024-05-23T21:40:07.520971Z",
-     "iopub.status.idle": "2024-05-24T03:58:41.264506Z",
-     "shell.execute_reply": "2024-05-24T03:58:41.264020Z"
+     "iopub.execute_input": "2024-06-14T21:31:23.051345Z",
+     "iopub.status.busy": "2024-06-14T21:31:23.051121Z",
+     "iopub.status.idle": "2024-06-15T03:50:57.755737Z",
+     "shell.execute_reply": "2024-06-15T03:50:57.755279Z"
     },
     "jukit_cell_id": "rHYvmbnZNf"
    },
@@ -566,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best average validation accuracy = 0.9029186077142679\n"
+      "Best average validation accuracy = 0.9024130503181608\n"
      ]
     }
    ],
@@ -634,10 +586,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-24T03:58:41.296367Z",
-     "iopub.status.busy": "2024-05-24T03:58:41.296170Z",
-     "iopub.status.idle": "2024-05-24T03:58:49.163525Z",
-     "shell.execute_reply": "2024-05-24T03:58:49.163160Z"
+     "iopub.execute_input": "2024-06-15T03:50:57.783101Z",
+     "iopub.status.busy": "2024-06-15T03:50:57.782920Z",
+     "iopub.status.idle": "2024-06-15T03:51:04.443224Z",
+     "shell.execute_reply": "2024-06-15T03:51:04.442831Z"
     },
     "jukit_cell_id": "FNeiZcYJzz"
    },
@@ -1049,12 +1001,12 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=164.38164084165948, max_iter=3000, n_jobs=-1,\n",
-       "                   random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=164.38164084165948, max_iter=3000, n_jobs=-1,\n",
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=0.23048961229552578, max_iter=3000, n_jobs=-1,\n",
+       "                   random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=0.23048961229552578, max_iter=3000, n_jobs=-1,\n",
        "                   random_state=0)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression(C=164.38164084165948, max_iter=3000, n_jobs=-1,\n",
+       "LogisticRegression(C=0.23048961229552578, max_iter=3000, n_jobs=-1,\n",
        "                   random_state=0)"
       ]
      },
@@ -1091,10 +1043,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-24T03:58:49.165161Z",
-     "iopub.status.busy": "2024-05-24T03:58:49.165044Z",
-     "iopub.status.idle": "2024-05-24T03:58:56.895866Z",
-     "shell.execute_reply": "2024-05-24T03:58:56.895450Z"
+     "iopub.execute_input": "2024-06-15T03:51:04.445011Z",
+     "iopub.status.busy": "2024-06-15T03:51:04.444773Z",
+     "iopub.status.idle": "2024-06-15T03:51:12.000008Z",
+     "shell.execute_reply": "2024-06-15T03:51:11.999534Z"
     },
     "jukit_cell_id": "Hwc1Sal9AZ"
    },
@@ -1130,10 +1082,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-24T03:58:56.898024Z",
-     "iopub.status.busy": "2024-05-24T03:58:56.897874Z",
-     "iopub.status.idle": "2024-05-24T03:58:57.055952Z",
-     "shell.execute_reply": "2024-05-24T03:58:57.055525Z"
+     "iopub.execute_input": "2024-06-15T03:51:12.002151Z",
+     "iopub.status.busy": "2024-06-15T03:51:12.001992Z",
+     "iopub.status.idle": "2024-06-15T03:51:12.156637Z",
+     "shell.execute_reply": "2024-06-15T03:51:12.156212Z"
     },
     "jukit_cell_id": "4uw0FlkRQV"
    },
@@ -1151,10 +1103,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-24T03:58:57.058268Z",
-     "iopub.status.busy": "2024-05-24T03:58:57.058118Z",
-     "iopub.status.idle": "2024-05-24T03:59:32.432709Z",
-     "shell.execute_reply": "2024-05-24T03:59:32.432136Z"
+     "iopub.execute_input": "2024-06-15T03:51:12.159133Z",
+     "iopub.status.busy": "2024-06-15T03:51:12.158981Z",
+     "iopub.status.idle": "2024-06-15T03:51:47.616096Z",
+     "shell.execute_reply": "2024-06-15T03:51:47.615509Z"
     },
     "jukit_cell_id": "ONBKrPrWx0"
    },
